Visualize diff using jsdifflib

--- a/analysis/src/main/resources/visualization/HeaderOfHTML.html
+++ b/analysis/src/main/resources/visualization/HeaderOfHTML.html
@@ -27,8 +27,13 @@
 	}
 	
     </style>
+    <link rel="stylesheet" type="text/css" href="diffview.css"/>
+	<script type="text/javascript" src="diffview.js"></script>
+	<script type="text/javascript" src="difflib.js"></script>
+	<!-- load the d3.js library -->	
+	<script src="http://d3js.org/d3.v3.min.js"></script>
+	<script src="https://unpkg.com/textures@1.2.0/dist/textures.js"></script>
 
   </head>
-
-  <body>
+<body>
 
