Fully move javascript code to separate files

--- a/analysis/src/main/resources/visualization/HeaderOfHTML.html
+++ b/analysis/src/main/resources/visualization/HeaderOfHTML.html
@@ -56,3 +56,7 @@ Plot
 	style='position:absolute; bottom: 0px; right:0px; overflow: scroll; width: 1000px; height: 300px; background-color: #BBBBBB; border: 2px solid blue; border-radius: 1em 1em 1em 1em; padding: 1em;'>
 Quelltext
 </div>
+
+<div id='tree' 
+	style='position: absolute; top: 150px; right: 5px; left: 5px; bottom: 335px; overflow: scroll; border: 2px solid blue; border-radius: 1em 1em 1em 1em;'> 
+</div>
