--- a/analysis/src/main/resources/visualization/HeaderOfHTML.html
+++ b/analysis/src/main/resources/visualization/HeaderOfHTML.html
@@ -57,7 +57,7 @@
 <div id='footer'
 	style='position: relative; width: 100%;'>
 	<div id='histogramm' 
-	   style='float: left; background-color: #BBBBBB; border: 2px solid blue; border-radius: 1em 1em 1em 1em; padding: 1em;'>
+	   style='float: left; width: 650px; overflow: scroll; background-color: #BBBBBB; border: 2px solid blue; border-radius: 1em 1em 1em 1em; padding: 1em;'>
 	Plot
 	</div>
 	
