Add highlighting in RCA code

--- a/analysis/src/main/resources/visualization/HeaderOfHTML.html
+++ b/analysis/src/main/resources/visualization/HeaderOfHTML.html
@@ -31,6 +31,10 @@
 	<script type="text/javascript" src="diffview.js"></script>
 	<script type="text/javascript" src="difflib.js"></script>
 	<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+	
+	<link rel="stylesheet"
+      		href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.4.1/build/styles/default.min.css">
+	<script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.4.1/build/highlight.min.js"></script>
 	<!-- load the d3.js library -->	
 	<script src="http://d3js.org/d3.v3.min.js"></script>
 	<script src="https://unpkg.com/textures@1.2.0/dist/textures.js"></script>
@@ -41,12 +45,12 @@
 <div id='header'
 	style='position: relative; width: 100%;'>
 	<div id='infos'
-		style='float:left; background-color: #BBBBBB; border: 2px solid blue; border-radius: 1em 1em 1em 1em; padding: 1em;'>
+		style='float:left; background-color: #DDD; border: 2px solid blue; border-radius: 1em 1em 1em 1em; padding: 1em;'>
 	Statistische Informationen
 	</div>
 	
 	<div id="testcaseDiv" 
-		style='overflow:scroll; background-color: #BBBBBB; border: 2px solid blue; border-radius: 1em 1em 1em 1em; padding: 1em;'>
+		style='overflow:scroll; background-color: #DDD; border: 2px solid blue; border-radius: 1em 1em 1em 1em; padding: 1em;'>
 	</div>
 </div>
 
@@ -57,12 +61,12 @@
 <div id='footer'
 	style='position: relative; width: 100%;'>
 	<div id='histogramm' 
-	   style='float: left; width: 650px; overflow: scroll; background-color: #BBBBBB; border: 2px solid blue; border-radius: 1em 1em 1em 1em; padding: 1em;'>
+	   style='float: left; width: 650px; overflow: scroll; background-color: #DDD; border: 2px solid blue; border-radius: 1em 1em 1em 1em; padding: 1em;'>
 	Plot
 	</div>
 	
 	<div id='quelltext' 
-		style='overflow: scroll; background-color: #BBBBBB; border: 2px solid blue; border-radius: 1em 1em 1em 1em; padding: 1em;'>
+		style='overflow: scroll; background-color: #DDD; border: 2px solid blue; border-radius: 1em 1em 1em 1em; padding: 1em;'>
 	Quelltext
 	</div>
 </div>
