Fix highlighting finally, set correct visibility, remote ${argLine} to remove interference of jacoco and kieker

--- a/analysis/src/main/resources/visualization/HeaderOfHTML.html
+++ b/analysis/src/main/resources/visualization/HeaderOfHTML.html
@@ -33,7 +33,7 @@
 	<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 	
 	<link rel="stylesheet"
-      		href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.4.1/build/styles/default.min.css">
+      		href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.4.1/build/styles/default.min.css"></link>
 	<script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.4.1/build/highlight.min.js"></script>
 	<!-- load the d3.js library -->	
 	<script src="http://d3js.org/d3.v3.min.js"></script>
