Prepare dashboard for analysis of individual node measurements

--- a/analysis/src/main/resources/visualization/HeaderOfHTML.html
+++ b/analysis/src/main/resources/visualization/HeaderOfHTML.html
@@ -38,6 +38,8 @@
 	<!-- load the d3.js library -->	
 	<script src="http://d3js.org/d3.v3.min.js"></script>
 	<script src="https://unpkg.com/textures@1.2.0/dist/textures.js"></script>
+	
+	<script src="jsGraphSource.js"></script>	
 
   </head>
 <body>
