Add type to html

--- a/analysis/src/main/resources/visualization/HeaderOfHTML.html
+++ b/analysis/src/main/resources/visualization/HeaderOfHTML.html
@@ -34,12 +34,12 @@
 	
 	<link rel="stylesheet"
       		href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.4.1/build/styles/default.min.css"></link>
-	<script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.4.1/build/highlight.min.js"></script>
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.4.1/build/highlight.min.js"></script>
 	<!-- load the d3.js library -->	
-	<script src="http://d3js.org/d3.v3.min.js"></script>
-	<script src="https://unpkg.com/textures@1.2.0/dist/textures.js"></script>
+	<script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
+	<script type="text/javascript" src="https://unpkg.com/textures@1.2.0/dist/textures.js"></script>
 	
-	<script src="jsGraphSource.js"></script>	
+	<script type="text/javascript" src="jsGraphSource.js"></script>	
 
   </head>
 <body>
