--- a/analysis/src/main/resources/visualization/HeaderOfHTML.html
+++ b/analysis/src/main/resources/visualization/HeaderOfHTML.html
@@ -27,6 +27,7 @@
 	}
 	
     </style>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" type="text/css" href="diffview.css"/>
 	<script type="text/javascript" src="diffview.js"></script>
 	<script type="text/javascript" src="difflib.js"></script>
@@ -44,31 +45,28 @@
   </head>
 <body>
 
-<div id='header'
-	style='position: relative; width: 100%;'>
-	<div id='infos'
-		style='float:left; background-color: #DDD; border: 2px solid blue; border-radius: 1em 1em 1em 1em; padding: 1em;'>
-	Statistische Informationen
+<div class="visualization-row">
+	<div class="card header-card">
+		<div id="infos">Statistische Informationen</div>
 	</div>
-	
-	<div id="testcaseDiv" 
-		style='overflow:scroll; background-color: #DDD; border: 2px solid blue; border-radius: 1em 1em 1em 1em; padding: 1em;'>
+	<div class="card header-card">
+		<div id="testcaseDiv"></div>
 	</div>
 </div>
 
-<div id='tree' 
-	style='position: relative; width: 100%; height: 500px;  overflow: scroll; border: 2px solid blue; border-radius: 1em 1em 1em 1em;'> 
+<div class="visualization-row">
+	<div class="card tree-card">
+		<div id="tree"></div>
+	</div>
 </div>
 
-<div id='footer'
-	style='position: relative; width: 100%;'>
-	<div id='histogramm' 
-	   style='float: left; width: 650px; height: 300px; overflow: scroll; background-color: #DDD; border: 2px solid blue; border-radius: 1em 1em 1em 1em; padding: 1em;'>
-	Plot
+<div class="visualization-row">
+	<div class="card footer-card">
+		<div id="kieker"></div>
+		<div id="histogramm"></div>
+		<p id="histogrammLink"></p>
 	</div>
-	
-	<div id='quelltext' 
-		style='overflow: scroll; background-color: #DDD; border: 2px solid blue; border-radius: 1em 1em 1em 1em; padding: 1em;'>
-	Quelltext
+	<div class="card footer-card">
+		<div id="quelltext">Quelltext</div>
 	</div>
 </div>
