--- a/analysis/src/main/resources/visualization/nodeDashboard.html
+++ b/analysis/src/main/resources/visualization/nodeDashboard.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
 
     <title>Node Inspector</title>
-	
+	<link rel="stylesheet" href="style.css">
 	<style>
 	.part{
 	  background-color: #DDD; border: 2px solid blue; border-radius: 1em 1em 1em 1em; padding: 1em;
@@ -15,40 +15,46 @@
 	<script src="https://cdn.jsdelivr.net/npm/jstat@latest/dist/jstat.min.js"></script>
 	
 	<script src="jsGraphSource.js"></script>
+	<script> jq$ = jQuery.noConflict();</script>
 </head>
 <body>
-<div id='overallHistogram' class='part' style='float:left; width:45%; height: 47%'>
-
-</div>
-<div id='selectedHistogram' class='part' style='float:right; width:45%; height: 47%'>
-
-</div>
-<div id='selection' class='part' style='float:left; width:45%; height: 47%'>
-  <div id='selectionTable' style='float:left; width: 45%'>
-  Available VMs:
-  <table style="height: 90%; width: 300px;">
-  	<tr><td>Predecessor</td><td>Current</td></tr>
-    <tr style="height: 90%">
-      <td style='width: 50%; height: 100%'>
-       <div id='predecessorOptions' style='height:100%'>
-       </div>
-     </td>
-     <td  style='width: 50%; height: 100%'>
-      <div id='currentOptions' style='height: 100%'>
-      </div>
-   </td></tr>
-  </table>
-  <a href='#' onClick='visualizeSelected();'>Visualize Selected</a>
-  </div>
-  <div id='tValueTable' style='float: right; width: 45%'>
-  
-  </div>
-</div>
-<div id='graphs' style='float: right; width: 47%; height: 47%'>
-	<div id='graphPredecessor' class='part' style='width: 95%; height:47%;' >
-	
-	</div>
-	<div id='graphCurrent' class='part' style='width: 95%; height:47%;' >
-	
-	</div>
-</div>
+<div class="dashboard-container">
+				<div class="card">
+					<div id="currentNode"></div>
+					<div id="overallHistogram"></div>
+				</div>
+				<div class="card">
+					<div id="selectedHistogram"></div>
+				</div>
+				<div id="selection" class="card selection-card">
+					<div class="selection-container">
+						<div class="vms-container">
+							<span><b>Available VMs:</b></span>
+							<div class="vms-selection-container">
+								<div class="vms-selection-options">
+									<div><span><b>Predecessor</b></span></div>
+									<div id='predecessorOptions'></div>
+								</div>
+								<div class="vms-selection-options">
+									<div><span><b>Current</b></span></div>
+									<div id='currentOptions'></div>
+								</div>
+							</div>
+							<div class="button-wrap">
+								<a role="button" onClick='visualizeSelected();'>Visualize Selected</a>
+							</div>
+						</div>
+						<div id='tValueTable'></div>
+					</div>
+				</div>
+				<div id='graphs' class='card'>
+					<div id='graphPredecessor'>
+						<span>Wählen sie die zu visualisierenden VMs aus!</span>
+					</div>
+				</div>
+				<div class='card'>
+					<div id='graphCurrent'>
+						<span>Wählen sie die zu visualisierenden VMs aus!</span>
+					</div>
+				</div>
+			</div>
