Move js libs to ../libs to make result folder cleaner

--- a/analysis/src/main/resources/visualization/RestOfHTML.html
+++ b/analysis/src/main/resources/visualization/RestOfHTML.html
@@ -1,5 +1,5 @@
 	
-  <script src="peass-visualization-code.js"></script>	
+  <script src="../libs/peass-visualization-code.js"></script>	
   </body>
 </html>
 
