--- a/analysis/src/main/resources/visualization/HeaderOfHTML.html
+++ b/analysis/src/main/resources/visualization/HeaderOfHTML.html
@@ -64,10 +64,10 @@
 	}
 	
     </style>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" type="text/css" href="diffview.css"/>
-	<script type="text/javascript" src="diffview.js"></script>
-	<script type="text/javascript" src="difflib.js"></script>
+    <link rel="stylesheet" href="../libs/style.css">
+    <link rel="stylesheet" type="text/css" href="../libs/diffview.css"/>
+	<script type="text/javascript" src="../libs/diffview.js"></script>
+	<script type="text/javascript" src="../libs/difflib.js"></script>
 	<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 	
 	<link rel="stylesheet"
@@ -77,7 +77,7 @@
 	<script type="text/javascript" src="https://d3js.org/d3.v3.min.js"></script>
 	<script type="text/javascript" src="https://unpkg.com/textures@1.2.0/dist/textures.js"></script>
 	
-	<script type="text/javascript" src="jsGraphSource.js"></script>	
+	<script type="text/javascript" src="../libs/jsGraphSource.js"></script>	
 
   </head>
 <body>
