--- a/analysis/src/main/resources/visualization/nodeDashboard.html
+++ b/analysis/src/main/resources/visualization/nodeDashboard.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
 
     <title>Node Inspector</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="../libs/style.css">
 	<style>
 	.part{
 	  background-color: #DDD; border: 2px solid blue; border-radius: 1em 1em 1em 1em; padding: 1em;
@@ -14,7 +14,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/jstat@latest/dist/jstat.min.js"></script>
 	
-	<script src="jsGraphSource.js"></script>
+	<script src="../libs/jsGraphSource.js"></script>
 	<script> jq$ = jQuery.noConflict();</script>
 </head>
 <body>
